fixes slider on mobile, add media.css

--- a/01_projects/style.css
+++ b/01_projects/style.css
@@ -17,8 +17,11 @@ body {
   align-items: center;
   background: #333;
   min-height: 100vh;
-  /* position: relative; */
 }
+
+/* 
+MENU =================================================================================================
+*/
 
 .menu {
   background: #333;
@@ -62,7 +65,7 @@ body {
   color: #2df;
 }
 
-.signup {
+/* .signup {
   position: absolute;
   top: 5px;
   right: 80px;
@@ -89,37 +92,11 @@ body {
 .signup span {
   display: block;
   padding: 10px 30px;
-}
+} */
 
-@media (max-width: 640px) {
-  .menu li {
-    width: 20%;
-    text-align: center;
-  }
-  .menu li:last-child {
-    padding: 9.5px 20px;
-  }
-  .menu i {
-    margin-right: 0px;
-  }
-
-  .menu li span {
-    display: none;
-  }
-
-  .signup {
-    display: block;
-    position: static;
-  }
-
-  .signup i {
-    display: block;
-    padding: 4px 4px;
-  }
-  .signup span {
-    padding: 0;
-  }
-}
+/* 
+SLIDER =================================================================================================
+*/
 
 .slider {
   position: relative;
@@ -171,7 +148,9 @@ body {
   cursor: pointer;
   opacity: 1;
 }
-
+/* 
+LOGO =================================================================================================
+*/
 h2 {
   position: relative;
   top: 60px;
